@@ -4,6 +4,9 @@
     the response from the server.  This is more helpful than the 500
     error page that Dancer throws up.
 
+    Added a new 'version' route, that returns the version of Pinto
+    that is running.
+
 0.026     2011-12-07 14:09:41 America/Los_Angeles
 
     No new functionality.  Just matching up with the latest Pinto API.
